# ai-news-digest

./: .env.example  .gitignore  README.md  com.rajsingh.ai-news-digest.plist  feeds.toml  pyproject.toml
src/ai_news_digest/: article.py  config.py  delivery.py  feeds.py  filter.py  main.py  notebook.py
