[project]
name = "ai-news-digest"
version = "0.1.0"
description = "Daily AI news digest with article and podcast generation"
readme = "README.md"
authors = [
    { name = "rajsingh-canva", email = "raj.singh@rsnetworks.com.au" }
]
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
]

[project.scripts]
ai-news-digest = "ai_news_digest.main:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
